--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
