--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-06",
+  "name": "loopis-amigo-oculto",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -11,12 +11,8 @@
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
